--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,46 @@ body {
   z-index: 100;
 }
 
+#container2{ 
+  width:75px; height:75px;  
+  transform:scale(.65);
+  position :absolute; 
+  left:3em; top:3em; 
+  border:7px solid rgba(0,0,0,0.8);
+  border-radius:50%;
+  box-shadow: 0px 0px 30px 0px orange , 0px 0px 150px 0px #00fc6e , inset 0px 0px 50px 0px rgba(0,0,0,0.7) ;
+  background:rgba(255,255,255,0.2);
+}
+
+.R-T2 , .R-D2{
+  width:300px; height:300px;
+  position:absolute;
+  left:50%; top:50%; transform: translate(-50%,-50%);
+  opacity:0.8;
+  overflow:visible;
+  z-index:1;
+}
+
+.R-T2 {clip:rect(0px 300px 150px 0px);   }
+.R-D2 {clip:rect(150px 300px 300px 0px);  }
+
+#core2{
+  line-height:160px;
+  text-align:center; color:white;
+  position:absolute;
+  left:50%; top:50%;
+  width:160px; height:160px;
+  background-color: #008445;
+  border-radius:50%;
+  transform: translate(-50%,-50%);
+  z-index:1;
+  box-shadow: inset 0px -10px 2px 5px rgba(0,0,0,0.3) , inset 0px 0px 50px 0px rgba(0,0,0,0.5) ;
+  text-shadow: 0px 4px 0px rgba(0,0,0,0.5);
+}
+
+.smallfont{
+  font-size:25px; font-family:'Oswald', tahoma; 
+  }
 
 
 .R-T0,
@@ -88,26 +128,6 @@ body {
   clip: rect(150px 300px 300px 0px);
 }
 
-.R-T2,
-.R-D2 {
-  width: 300px;
-  height: 300px;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  opacity: 0.8;
-  overflow: visible;
-  z-index: 1;
-}
-
-.R-T2 {
-  clip: rect(0px 300px 150px 0px);
-}
-
-.R-D2 {
-  clip: rect(150px 300px 300px 0px);
-}
 #core {
   line-height: 160px;
   text-align: center;
